# cmaketest

./: .gitignore
cmake test/: CMakeLists.txt
cmake test/src/: CMakeLists.txt  main.cpp
cmake test/src/advanced/: Advanced.cpp  Advanced.h  CMakeLists.txt
cmake test/src/simple/: CMakeLists.txt  Simple.cpp  Simple.h
